# PulseTrade

./: .env.example  .gitignore  Kronos_Predictive_Stack.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  tmp_missing.txt
configs/: llm_prompts.yaml
db/: alpaca_universe.csv  alpaca_universe.meta.json  alpaca_universe.symbols.txt  build_missing_180.sql  coverage_180.sql  init.sql  init_policies.sql
docker/: scheduler.cron
docs/: Kronos_Models_Training_and_Datastreams.md  PLANNING_EXECUTION.md  data_fmp.md  kronos_stack.md  llm.md
libs/common/: common.py  http_helpers.py  pyproject.toml
prometheus/: prometheus.yml
reports/: coverage_180.csv  coverage_180_after_alpaca.csv  coverage_180_live.csv  daily_plan_selection_2025-11-15.json  daily_plan_selection_2025-11-15.md  daily_plan_selection_2025-11-16.json  daily_plan_selection_2025-11-16.md  daily_plan_selection_2025-11-17.json  daily_plan_selection_2025-11-17.md  monte_carlo_top10_2025-11-11.json  monte_carlo_top10_2025-11-17.json  monte_carlo_universe_2025-11-11.json  monte_carlo_universe_2025-11-17.json  predictability_snapshot_2025-11-12.json  top100_best_fit.json  top100_next_day_predictions.json  top100_predictions_2025-11-19.json
scripts/: __init__.py  backfill_alpaca_bars_universe.py  backfill_finnhub_gaps.py  backfill_liquidity.py  build_alpaca_universe.py  coverage_report.py  nightly_strategy_eval.sh  prune_hf_by_universe.py
tests/: test_allocator.py  test_alpaca_short_gate.py  test_daily_plan_eval.py  test_decision_universe.py  test_factors_quiver.py  (+16 more)
(+197 files in other folders)
