[project]
name = "pulse-common"
version = "0.1.0"
description = "Shared utilities for PulseTrade"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "psycopg[binary]>=3.1",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "aioredis>=2.0",
  "prometheus-client>=0.20",
  "httpx>=0.27",
  "websockets>=12.0",
  "orjson>=3.10"
]

[tool.setuptools.packages.find]
where = ["."]
